@@ -1,3 +1,8 @@
+2011-12-30  Takashi Kato  <ktakashi@ymail.com>
+
+	* sitelib/sagittarius/control.scm (define-with-key):
+	rewrite define-with-key.
+
 2011-12-29  Takashi Kato  <ktakashi@ymail.com>
 
 	* sitelib/sagittarius/reader.scm (sagittarius reader): 
